--- a/about-us.html
+++ b/about-us.html
@@ -7,6 +7,7 @@
     <title>About Us | Pins</title>
     <link rel="stylesheet" href="style-about-us.css">
     <link rel="stylesheet" href="nav-style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
