--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
     <title>INTERIOR | Pins</title>
     <link rel="stylesheet" href="style-gallery.css">
     <link rel="stylesheet" href="nav-style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 <body>
     <!------------------------------MENU-------------------------------------------->
