--- a/gallery.html
+++ b/gallery.html
@@ -103,50 +103,48 @@
     </div>
     <div class="infor">
         <div class="award">
-            <pre>
             <h1>Award</h1>
-
-K- Design award 2022
-DOTY design award 2022
-
-A' Design award Italy 2021
-Qanvast design award 2021
-            
-ADA award 2020
-IDCS Singapore design award 2020
-SIDA Singapore Interior design award 2020
-A' Design award Italy 2020
-
-JIDA Design award 2019
-SIDA Singapore Interior design award 2019
-REKA international award 2019
-
-REKA international award 2018
-REKA international award 2017
-        </pre>
+            <br><br>
+            K- Design award 2022<br>
+            DOTY design award 2022<br>
+            <br>
+            A' Design award Italy 2021<br>
+            Qanvast design award 2021<br>
+            <br>
+            ADA award 2020<br>
+            IDCS Singapore design award 2020<br>
+            SIDA Singapore Interior design award 2020<br>
+            A' Design award Italy 2020<br>
+            <br>
+            JIDA Design award 2019<br>
+            SIDA Singapore Interior design award 2019<br>
+            REKA international award 2019<br>
+            <br>
+            REKA international award 2018<br>
+            REKA international award 2017
+            </pre>
         </div>
         <div class="contact">
-            <pre>
-            <h1>Contact</h1> 
+            <h1 class="titleh1">Contact</h1>
+            <br><br>
+            <div class="sp-loc">
+                <span>
+                    D 3-3, Pusat Komersial Parklane, Jalan SS 7/26,<br> 47301 Petaling Jaya, Selangor, ​Malaysia.
+                </span>
+            </div>
+            <div class="sp-phone">
+                <span>
+                    03 - 7887 2752<br>
+                    014 - 944 7685
+                </span>
+            </div>
 
-D 3-3, Pusat Komersial Parklane,
-Jalan SS 7/26,
-47301 Petaling Jaya, Selangor，
-​Malaysia.
-
-
-
-03 - 7887 2752
-014 - 944 7685
-            </pre>
         </div>
         <div class="office-hour">
-            <pre>
-            <h1>Office Hour</h1>
-
-Monday to friday
-10am - 7pm
-            </pre>
+            <h1 class="titleh1">Office Hour</h1>
+            <br><br>
+            Monday to friday<br>
+            10am - 7pm
         </div>
 
     </div>
