--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
                     We specialize in interior design, architecture and decoration.
                     Our ambition is to create designs with life style .
                 </p>
+                <button class="hidden-btn-more" onclick="goToGallery()">more</button>
                 <button class="btn-service-forward" onclick="goToOurService()"></button>
             </div>
         </section>
