--- a/gallery.html
+++ b/gallery.html
@@ -75,23 +75,128 @@
     <!-----------------------------gallery-menu---------------------------->
     <div class="gallery-menu">
         <img src="image/Logo_01.webp">
+        <div class="btn-container">
         <button class="btn-1">Interior design</button>
-        <button class="btn-2">facade design</button>
-        <button class="btn-3">commercial retail</button>
-        <button class="btn-4">video gallery</button>
+        <button class="btn-2" onclick="more()">facade design</button>
+        <button class="btn-3" onclick="more()">commercial retail</button>
+        <button class="btn-4" onclick="more()">video gallery</button>
+        </div>
+        
     </div>
     <!----------------------------gallery-container-->
     <div class="gallery-container">
-        <div class="gallery-1"></div>
-        <div class="gallery-2"></div>
-        <div class="gallery-3"></div>
-        <div class="gallery-4"></div>
-        <div class="gallery-5"></div>
-        <div class="gallery-6"></div>
-        <div class="gallery-7"></div>
-        <div class="gallery-8"></div>
-        <div class="gallery-9"></div>
-        <div class="gallery-10"></div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
+        <div class="gallery gallery-1">
+            <img class ="gallery-img" src="image/demo1.webp">
+            <div class="gallery-description">
+                <p>- BOLD AND BLISSFULLY CHIC -<br>
+                    condominium, petaling jaya</p>
+            </div>
+        </div>
     </div>
 
    <script src="script.js"></script>
