--- a/gallery.html
+++ b/gallery.html
@@ -83,7 +83,7 @@
         </div>
         
     </div>
-    <!----------------------------gallery-container-->
+    <!----------------------------gallery-container----------------------->
     <div class="gallery-container">
         <div class="gallery gallery-1">
             <img class ="gallery-img" src="image/demo1.webp">
@@ -201,7 +201,7 @@
 
    <script src="script.js"></script>
 </body>
-<!------------------------------------fotter-------------------------------------------->
+<!------------------------------------footer-------------------------------------------->
 <footer>
     <div class="banner">
         <img src="image/logo.webp">
@@ -254,7 +254,7 @@
 
     </div>
     <div class="final-line">
-        <div class="email">pinsalesteam@gmail.com</div>
+        <div class="email"><a href="mailto:pinsalesteam@gmail.com">pinsalesteam@gmail.com</a></div>
         <div class="menu-final-line">
             <ul>
                 <li><a href="index.html">HOME</a></li>
