--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 
     </div>
     <div class="final-line">
-        <div class="email">pinsalesteam@gmail.com</div>
+        <div class="email"><a href="mailto:pinsalesteam@gmail.com">pinsalesteam@gmail.com</a></div>
         <div class="menu-final-line">
             <ul>
                 <li><a href="index.html">HOME</a></li>
