--- a/gallery.html
+++ b/gallery.html
@@ -208,7 +208,7 @@
     </div>
     <div class="infor">
         <div class="award">
-            <h1>Award</h1>
+            <h1 class="titleh1">Award</h1>
             <br><br>
             K- Design award 2022<br>
             DOTY design award 2022<br>
