--- a/gallery.html
+++ b/gallery.html
@@ -81,12 +81,11 @@
         <button class="btn-3" onclick="more()">commercial retail</button>
         <button class="btn-4" onclick="more()">video gallery</button>
         </div>
-        
     </div>
     <!----------------------------gallery-container----------------------->
     <div class="gallery-container">
         <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
+            <img class ="gallery-img" src="image/demo1.webp" onclick="goToDetail()">
             <div class="gallery-description">
                 <p>- BOLD AND BLISSFULLY CHIC -<br>
                     condominium, petaling jaya</p>
