--- a/gallery-detail.html
+++ b/gallery-detail.html
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="gallery-img-con">
-
+            <img src="image/demo4.webp">
         </div>
     </div>
 
