--- a/gallery.html
+++ b/gallery.html
@@ -91,111 +91,31 @@
                     condominium, petaling jaya</p>
             </div>
         </div>
+
         <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
+            <img class ="gallery-img" src="image/demo1.webp" onclick="goToDetail()">
             <div class="gallery-description">
                 <p>- BOLD AND BLISSFULLY CHIC -<br>
                     condominium, petaling jaya</p>
             </div>
         </div>
+
         <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
+            <img class ="gallery-img" src="image/demo1.webp" onclick="goToDetail()">
             <div class="gallery-description">
                 <p>- BOLD AND BLISSFULLY CHIC -<br>
                     condominium, petaling jaya</p>
             </div>
         </div>
+
         <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
+            <img class ="gallery-img" src="image/demo1.webp" onclick="goToDetail()">
             <div class="gallery-description">
                 <p>- BOLD AND BLISSFULLY CHIC -<br>
                     condominium, petaling jaya</p>
             </div>
         </div>
-        <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
-            <div class="gallery-description">
-                <p>- BOLD AND BLISSFULLY CHIC -<br>
-                    condominium, petaling jaya</p>
-            </div>
-        </div>
-        <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
-            <div class="gallery-description">
-                <p>- BOLD AND BLISSFULLY CHIC -<br>
-                    condominium, petaling jaya</p>
-            </div>
-        </div>
-        <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
-            <div class="gallery-description">
-                <p>- BOLD AND BLISSFULLY CHIC -<br>
-                    condominium, petaling jaya</p>
-            </div>
-        </div>
-        <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
-            <div class="gallery-description">
-                <p>- BOLD AND BLISSFULLY CHIC -<br>
-                    condominium, petaling jaya</p>
-            </div>
-        </div>
-        <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
-            <div class="gallery-description">
-                <p>- BOLD AND BLISSFULLY CHIC -<br>
-                    condominium, petaling jaya</p>
-            </div>
-        </div>
-        <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
-            <div class="gallery-description">
-                <p>- BOLD AND BLISSFULLY CHIC -<br>
-                    condominium, petaling jaya</p>
-            </div>
-        </div>
-        <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
-            <div class="gallery-description">
-                <p>- BOLD AND BLISSFULLY CHIC -<br>
-                    condominium, petaling jaya</p>
-            </div>
-        </div>
-        <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
-            <div class="gallery-description">
-                <p>- BOLD AND BLISSFULLY CHIC -<br>
-                    condominium, petaling jaya</p>
-            </div>
-        </div>
-        <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
-            <div class="gallery-description">
-                <p>- BOLD AND BLISSFULLY CHIC -<br>
-                    condominium, petaling jaya</p>
-            </div>
-        </div>
-        <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
-            <div class="gallery-description">
-                <p>- BOLD AND BLISSFULLY CHIC -<br>
-                    condominium, petaling jaya</p>
-            </div>
-        </div>
-        <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
-            <div class="gallery-description">
-                <p>- BOLD AND BLISSFULLY CHIC -<br>
-                    condominium, petaling jaya</p>
-            </div>
-        </div>
-        <div class="gallery gallery-1">
-            <img class ="gallery-img" src="image/demo1.webp">
-            <div class="gallery-description">
-                <p>- BOLD AND BLISSFULLY CHIC -<br>
-                    condominium, petaling jaya</p>
-            </div>
-        </div>
+        
     </div>
 
    <script src="script.js"></script>
